--- a/index.html
+++ b/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Argo CD Demo</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            background-color: #f0f0f0;
-        }
-        .container {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-        h1 {
-            color: #2c3e50;
-        }
+      body {
+        font-family: Arial, sans-serif;
+        margin: 40px;
+        background-color: #f0f0f0;
+      }
+      .container {
+        background-color: white;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      }
+      h1 {
+        color: #2c3e50;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <h1>Welcome to My Argo CD Demo!</h1>
-        <p>This page is automatically deployed using Argo CD.</p>
-        <p>Last updated: <span id="timestamp"></span></p>
+      <h1>Welcome to My Argo CD Demo!</h1>
+      <p>This page is automatically deployed using Argo CD.</p>
+      <p>Last updated: <span id="timestamp"></span></p>
+      <p>ref: <a href="https://github.com/tedckh/my-argocd-app" target="_blank">GitHub</a></p>
     </div>
     <script>
-        document.getElementById('timestamp').textContent = new Date().toLocaleString();
+      document.getElementById("timestamp").textContent =
+        new Date().toLocaleString();
     </script>
-</body>
+  </body>
 </html>
